<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentListProse">

    <action
        android:id="@+id/actionCreateProfile"
        app:destination="@id/fragmentCreateProfile"
        app:launchSingleTop="true"/>

    <action
        android:id="@+id/actionListProse"
        app:destination="@id/fragmentListProse"
        app:launchSingleTop="true"/>

    <fragment
        android:id="@+id/fragmentCreateProfile"
        android:name="de.handler.mobile.guerillaprose.presentation.CreateProfileFragment"
        android:label="@string/title_create_profile"
        tools:layout="@layout/fragment_create_profile">

    </fragment>

    <fragment
        android:id="@+id/fragmentShowProfile"
        android:name="de.handler.mobile.guerillaprose.presentation.ShowProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_show_profile">
        <action
            android:id="@+id/action_fragmentShowProfile_self"
            app:destination="@id/fragmentShowProfile"/>
    </fragment>

    <fragment
        android:id="@+id/fragmentListProse"
        android:name="de.handler.mobile.guerillaprose.presentation.ListProseFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list_prose">

        <action
            android:id="@+id/actionCreateProse"
            app:destination="@id/fragmentCreateProse"
            app:launchSingleTop="true"/>

    </fragment>

    <fragment
        android:id="@+id/fragmentCreateProse"
        android:name="de.handler.mobile.guerillaprose.presentation.CreateProseFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create_prose"/>

</navigation>